<resources>
    <string name="app_name">memo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="switch_style_column">2カラム</string>
    <string name="switch_style_sort">新しい順</string>
    <string name="switch_style_tag_group">タグでまとめて表示</string>
    <string name="nav_tag">タグの編集</string>
    <string name="nav_manage">詳細設定</string>
    <string name="nav_delete">ごみ箱</string>
    <string name="action_trash">ごみ箱</string>
    <string name="action_highlight">固定</string>
    <string name="action_reminder">リマインダー</string>
    <string name="action_tag">タグ</string>

    <string name="pref_title_root">詳細設定</string>

    <string name="pref_title_start_up">起動</string>
    <string name="pref_sub_title_start_up">起動時の設定</string>
    <string name="pref_summary_start_up">起動時の設定</string>
    <string name="pref_title__start_up_disuse">使用しない</string>
    <string name="pref_title__start_up_3_tap">3タップで起動</string>

    <string name="pref_title_reminder">リマインダー</string>
    <string name="pref_key_reminder">リマインダー</string>
    <string name="pref_summary_reminder">時間を指定</string>
    <string name="pref_summary_reminder_morning">8:00</string>
    <string name="pref_sub_title_reminder_morning">朝</string>
    <string name="pref_summary_reminder_afternoon">12:00</string>
    <string name="pref_sub_title_reminder_afternoon">昼</string>
    <string name="pref_summary_reminder_evening">18:00</string>
    <string name="pref_sub_title_reminder_evening">夕方</string>
    <string name="pref_summary_reminder_night">20:00</string>
    <string name="pref_sub_title_reminder_night">夜</string>
    <string name="memo_card_date" />

    <string name="hint_tag">タグ名を入力</string>>
    <string name="save_tag">保存</string>
    <string name="pref_summary_lock_screen">ロックスクリーン表示</string>
    <string name="pref_sub_title_lock_screen">ロックスクリーンより前の表示を設定</string>

    <!--ReminderDialog-->
    <string name="reminder_dialog_title">リマインダーを追加</string>
    <string name="reminder_delete_button">削除</string>
    <string name="reminder_cancel_button">キャンセル</string>
    <string name="reminder_save_button">保存</string>
    <string name="notification_channel_name">リマインダーの通知</string>
    <string name="notification_channel_discription">リマインダーによる通知を設定</string>


    <!--RepeatDialog-->
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="sunday">日</string>

    <string name="time_scale_every_day">毎日</string>
    <string name="time_scale_day">日ごと</string>
    <string name="time_scale_every_week">毎週</string>
    <string name="time_scale_week">週ごと</string>
    <string name="time_scale_every_month">毎月</string>
    <string name="time_scale_month">か月ごと</string>
    <string name="time_scale_every_year">毎年</string>
    <string name="time_scale_year">年ごと</string>
    <string name="text_view_frequency_title">頻度</string>
    <string name="text_view_scale">間隔</string>
    <string name="radio_button_no_end">くり返さない</string>
    <string name="radio_button_count">指定した回数だけ</string>
    <string name="radio_button_date">指定した日付まで</string>
    <string name="button_finish">完了</string>
    <string name="text_view_repeat_time">回</string>
    <string name="radio_button_same_day">その月の同じ日</string>
    <string name="radio_button_same_last">その月の末日</string>


</resources>
