<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/pref_title_wake_up"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="pref_key_wake_up"
            android:summary="@string/pref_summary_wake_up"
            android:title="@string/pref_sub_title_wake_up"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_reminder"
        android:key="pref_key_storage_settings">
        <EditTextPreference
            android:key="pref_key_reminder"
            android:summary="@string/pref_summary_reminder_morning"
            android:title="@string/pref_sub_title_reminder_morning"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="pref_key_wake_up"
            android:summary="@string/pref_summary_reminder_afternoon"
            android:title="@string/pref_sub_title_reminder_afternoon"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="pref_key_wake_up"
            android:summary="@string/pref_summary_reminder_evening"
            android:title="@string/pref_sub_title_reminder_evening"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="pref_key_wake_up"
            android:summary="@string/pref_summary_reminder_night"
            android:title="@string/pref_sub_title_reminder_night"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>