<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_drawer"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/switch_style_column"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/switch_style_column" />
        <item
            android:id="@+id/switch_style_sort"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/switch_style_sort" />
        <item
            android:id="@+id/switch_style_tag_group"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/switch_style_tag_group" />

        <item
            android:id="@+id/nav_tag"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_tag" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_manage" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_delete" />
</menu>
