<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_day_of_week"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioButton
        android:id="@+id/radio_button_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday" />

    <RadioButton
        android:id="@+id/radio_button_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday" />

    <RadioButton
        android:id="@+id/radio_button_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday" />

    <RadioButton
        android:id="@+id/radio_button_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"/>

    <RadioButton
        android:id="@+id/radio_button_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday" />

    <RadioButton
        android:id="@+id/radio_button_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday" />

    <RadioButton
        android:id="@+id/radio_button_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday" />

</LinearLayout>