<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.e28.memo.screen.reminder.ReclickableSpinner
        android:id="@+id/spinner_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />

    <com.example.e28.memo.screen.reminder.ReclickableSpinner
        android:id="@+id/spinner_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />

    <com.example.e28.memo.screen.reminder.ReclickableSpinner
        android:id="@+id/spinner_repeat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_delete_button" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_cancel_button" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_save_button" />

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>